# Kasterborous_Visualizer

./: .gitignore  ;w  CMakeLists.txt  intensitymap.h  kast_vis.h.in  kast_vis0.23  savefile.kas
icon/: frog.xpm
src/: LUA_template.lua  event.h  intensitymap.cpp  intensitymap.h  kast_vis.h.in  main.cpp  map.cpp  map.h  mapHandler.cpp  mapHandler.h  maphandler.cpp  maphandler.h  ui.cpp  ui.h  utility.h
src/physics/: phys.cpp  phys.h
src/widgets/: colormap.cpp  colormap.h  iblock.cpp  iblock.h  intensitymap.cpp  intensitymap.h
